--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,7 +1,7 @@
-- name: install and run the nginx
+- name: install and nginx
   hosts: web
   become: yes
-  task:
+  tasks:
   - name: install nginx package
     ansible.builtin.package:
       name: nginx
