--- a/03playbook.yaml
+++ b/03playbook.yaml
@@ -1,10 +1,9 @@
 - name: variable
   hosts: localhost
-  become: yes
   vars:
     trainer: "mani"
     course: "devops"
   tasks:
-  - name: variables 
+  - name: check variables 
     ansible.builtin.debug:
-      msg: "hi this is mani learning {{course}} trainer is {{trainer}}
+      msg: "hi iam learning {{course}}, trainer is {{trainer}}"
