--- a/03playbook.yaml
+++ b/03playbook.yaml
@@ -1,9 +1,9 @@
-- name: variable
+- name: variables
   hosts: localhost
   vars:
-    trainer: "mani"
     course: "devops"
+    trainer: "mani"
   tasks:
   - name: check variables 
     ansible.builtin.debug:
-      msg: "hi iam learning {{course}}, trainer is {{trainer}}"
+      msg: "hi, i am learning {{course}}, trainer is {{trainer}}"
