--- a/04.playbook.yaml
+++ b/04.playbook.yaml
@@ -1,13 +1,13 @@
 - name: variables with prompt
   hosts: localhost
   vars_prompt:
-  - name: username
-    prompt: pls enter ur username
+  - name: USERNAME
+    prompt: pls enter ur USERNAME
     private: false
     prompt: pls enter ur password
     private: true
   tasks:
-  - name: check variables 
+  - name: print and check variables 
     ansible.builtin.debug:
-      msg: "username is: {{username}}, password is: {{password}}"
+      msg: "username is: {{USERNAME}}, password is: {{password}}"
  
