--- a/05-playbook.yaml
+++ b/05-playbook.yaml
@@ -4,8 +4,8 @@
   tasks:
   - name: install or uninstall packages
     ansible.builtin.package:
-      name: {{item.name}}
-      state: present
+      name: "{{{item.name}}}"
+      state: "{{item.state}}"
     loop:
     - {name: 'git', state: 'present'}
     - {name: 'mysql', state: 'absent'}
