--- a/04.playbook.yaml
+++ b/04.playbook.yaml
@@ -1,12 +1,14 @@
 - name: variables with prompt
   hosts: localhost
+  become: yes
   vars_prompt:
   - name: USERNAME
-    prompt: pls enter ur USERNAME
+    prompt: pls enter ur username
     private: false
+  - name: PASSWORD
     prompt: pls enter ur password
     private: true
   tasks:
-  - name: print and check variables 
-    ansible.builtin.debug:
-      msg: "username is: {{USERNAME}}, password is: {{password}}"
+  - name: print and check values 
+    anisible.builtin.debug:
+      msg: "username is {{USERNAME}}, password is {{PASSWORD}}"
